--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		</div>
 
 		<!-- Form -->
-		<div class="card bg-light">
+		<div class="card ">
 			<div class="card-header">Add a new task</div>
 			<div class="card-body">
 				<form id="form">
